<resources>
    <string name="app_name">MyOpenStreetMap</string>
    <string name="title_buttonStart">START UPDATE LOCATION</string>
    <string name="title_buttonStop">STOP UPDATE LOCATION</string>
    <string name="title_buttonNewActivity">REUNION</string>
    <string name="text_info">Location update will be received only when app is foreground</string>
    <string name="title_lat">Lat :</string>
    <string name="title_long">Long :</string>
    <string name="title_update">Last updated on :</string>
    <string name="title_city">City :</string>
    <string name="title_fournisseur">Provider :</string>
    <string name="state_lat">0</string>
    <string name="state_long">0</string>
    <string name="state_info">--</string>

    <string name="title_buttonSearch">SEARCH</string>
    <string name="title_buttonReset">RESET</string>
    <string name="title_buttonExit">EXIT</string>
    <string name="title_adr">Adresse :</string>
    <string name="title_adr2">Adresse 2 :</string>
    <string name="title_range">Distance :</string>
    <string name="update_range">--</string>

    <string name="title_mes">Message :</string>
    <string name="title_send">SEND</string>
    <string name="title_send_loc">SEND LOCATION</string>
    <string name="title_welcome">Welcome to a new chatroom !</string>

    <string name="title_create">CREATE</string>
    <string name="title_nom">Nom</string>
    <string name="title_date">Date</string>
    <string name="title_Lieu">Lieu</string>

</resources>
